--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,7 @@
 
 <header>
     
-    <nav class="navbar navbar-expand-lg data-bs-theme="light">
+    <nav class="navbar navbar-expand-lg data-bs-theme="dark">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
