--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -18,7 +18,7 @@
               <li class="nav-item">
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">New</a>
+                <a class="nav-link {% if url_name == 'create_post' %}active{% endif %}" href="{% url 'create_post' %}">New</a>
               </li>
               {% if request.user.is_authenticated %}
               <li class="nav-item">
