--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,7 @@
 
 <header>
   {% with request.resolver_match.url_name as url_name %} 
-    <nav class="navbar navbar-expand-lg data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
@@ -11,16 +11,16 @@
           </button>
           <!-- Navigation items -->
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
               </li>
-              <li class="nav-item">
-                <a class="nav-link {% if url_name == 'create_post' %}active{% endif %}" href="{% url 'create_post' %}">New</a>
-              </li>
               {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'create_post' %}active{% endif %}"  href="{% url 'create_post' %}">New</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">logout</a>
               </li>
