update my {% endblocks %}

--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Create Post{% endblock %}
+{% block title %}Create Post{% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -14,4 +14,4 @@
         </div>
     </form>
 </div>
-{% endblock %}
+{% endblock content %}
