--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 
-{% block title %}{% trans "Sign In" %}{% endblock  %}
+{% block title %}{% trans "Sign In" %}{% endblock title %}
 
 {% block content %}
 <div class="container text-center">
@@ -22,4 +22,4 @@
     <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </form>
 </div>
-{% endblock %}
+{% endblock content %}
