--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Sign Out" %}{% endblock  %}
+{% block title %}{% trans "Sign Out" %}{% endblock title %}
 
 {% block content %}
 <div class="container text-center">
@@ -19,4 +19,4 @@
   </form>
 </div>
 
-{% endblock %}
+{% endblock content %}
