--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Signup" %}{% endblock  %}
+{% block title %}{% trans "Signup" %}{% endblock title %}
 
 {% block content %}
 <div class="container text-center">
@@ -19,4 +19,4 @@
     <button type="submit" class="btn btn-primary w25">Sign Up</button>
   </form>
 </div>
-{% endblock %}
+{% endblock title %}
