--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,12 @@
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
-    {% endblock %}
+    {% endblock extra_css%}
 
-    {% block onload_js %}
     <!-- Bootstrap js -->
+    {% block onload_js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    {% endblock %}
+    {% endblock onload_js %}
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
     
-    <title>Charge Together {% block title %}{% endblock %}</title>
+    <title>Charge Together {% block title %}{% endblock title %}</title>
 </head>
 <body>
     <!-- Header-->
@@ -31,7 +31,7 @@
     
     <main>
         {% block content %}
-        {% endblock %}
+        {% endblock content %}
     </main>
 
     <!-- Footer-->
