add Comments and update my blocks

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
     
-    <title>Charge Together {% block title %}{% endblock title %}</title>
+    <title>Charge Together - {% block title %}{% endblock title %}</title>
 </head>
 <body>
-    <!-- Header-->
+    <!-- Header -->
     {% include 'includes/header.html' %}
     
     <main>
