--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -19,4 +19,4 @@
     <button type="submit" class="btn btn-primary w25">Sign Up</button>
   </form>
 </div>
-{% endblock title %}
+{% endblock content %}
