--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,6 +25,9 @@
             <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" aria-current="page" href="{% url 'post_list' %}">Blog</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">About</a>
           </li>
           <li class="nav-item">
