--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <!-- Header -->
-    {% include 'includes/header.html' %}
+    {% include "includes/header.html" %}
     
     <main>
         {% block content %}
@@ -37,6 +37,6 @@
     </main>
 
     <!-- Footer-->
-    {% include 'includes/footer.html' %}
+    {% include "includes/footer.html" %}
 </body>
 </html>
