--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -37,8 +37,11 @@
             <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"  href="{% url 'create_post' %}">New</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">logout</a>
-            </li>
+          </li>
           {% else %}
           <li class="nav-item">
             <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
