Add content to profile.html and profile urls , install and add RichTextField

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,5 +38,10 @@
 
     <!-- Footer-->
     {% include "includes/footer.html" %}
+
+    {% block extra_js %}
+    
+    {% endblock extra_js %}
+
 </body>
 </html>
