--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,58 +1,57 @@
 {% load static %}
-    
+
 <!-- Logo for large screens -->
-<header class="site-header" role="banner">  
-  <div class="container-fluid">
-    <div class="row">
-      <div class="site-header-inner col-sm-12" >
-        <img src="{% static 'images/logo.webp' %}"  alt="Charge Together Logo">
+<header>
+  {% with request.resolver_match.url_name as url_name %}
+    <nav class="navbar navbar-expand-lg" data-bs-theme="light">
+      <div class="container-fluid">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navigation items -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
+                href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" aria-current="page"
+                href="{% url 'post_list' %}">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+              {% if request.user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"
+                href="{% url 'create_post' %}">New</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
+                href="{% url 'profile' request.user.id %}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
+                href="/accounts/logout/">logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
+                href="/accounts/signup/">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
+            </li>
+            {% endif %}
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </div>
-</header> 
-{% with request.resolver_match.url_name as url_name %} 
-  <nav class="navbar nav-bg navbar-expand-lg" data-bs-theme="light">
-    <div class="container-fluid">
-      <!-- Logo for small screens-->
-      <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}"  alt="Charge Together Logo"></a>
-      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- Navigation items -->
-      <div class="collapse navbar-collapse col-sm-12 justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" aria-current="page" href="{% url 'post_list' %}">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          {% if request.user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"  href="{% url 'create_post' %}">New</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">logout</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
-          </li>
-          {% endif %}
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-{% endwith %}
+    </nav>
+  {% endwith %}
+</header>
