--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -13,7 +13,6 @@
     --black: #000000;
     --sky-blue:#98cae0;
     --bleu-de-france: #3083dd;
-    --bg-img: url('../images/cool-background.webp') no-repeat center/cover;
     
     /* Utils */
     --small-box-shadow: 1px 4px 7px 0 #00000061;
@@ -37,89 +36,64 @@ h1, h2, h3, h4, h5, h6 {
 
 main {
     flex: 1 0 auto;
-    background-color:var(--sky-blue);
+    background-color:var(--white);
 }
-
-/* Header and Navigation */
-
-.site-header img {
-    display: none; /* hide the logo for bigger screens */
-}
-
-.nav {
-    visibility: hidden; /* hide navbar for bigger screens */
-}
-
-.navbar-brand {
-    float: left;
-    height: 50px;
-    padding: 15px 15px;
-    font-size: 18px;
-    line-height: 20px
-}
-
-/* Background image for navigation on smaller screens*/
-.nav-bg {
-    background:var(--bg-img);
-}
-.navbar-brand img {
-
-    width: 13rem; 
-    margin-top: -17px!important;
-    margin: 0 auto;
-}
-
-.navbar-toggler {
-    margin-right: 1rem; /* push the burger */
-}
-
-a.nav-link {
-    margin-inline-start: 2rem;
-    font-size: small;
-    color: var(--black); 
-}
-
-.active {
-    border-bottom: 1px solid var(--dark-purple);
-}
-
 
 /* Footer */
 
 footer {
     flex-shrink: 0;
+    background: var(--off-white);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
-
 }
 
 .social-icon {
     height: 2rem;
     margin: 1rem;
 }
+/* Header and Navigation */
+
+.navbar {
+    background:var(--off-white);
+}
+
+
+img.logo {
+    width:18.75rem; 
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+
+
+.active {
+    border-bottom: 1px solid var(--dark-purple);
+    font-weight: 500;
+}
+
 
 /* Form Styling */
-.container {
+.form  {
     background: var(--bg-img);
     width: 80%;
     margin: 3% auto;
     box-shadow: var(--small-box-shadow);
     border-radius: 5px;
-}
-
-.form {
     text-align: left;
 }
+
+
 .btn {
     background: var(--bleu-de-france);
 }
 
 /* Styling Blog Post */
 
-
+.card {
+    height: 92%;
+}
 
 .post {
     text-decoration: none;
@@ -130,36 +104,53 @@ footer {
     cursor: pointer;
 }
 
+.post-info {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
-@media screen and (min-width: 1024px){
-    .navbar-brand {
-        display:none; 
-        float:none;
-    }
+.post-container {
+    display: flex;
+    flex-direction: column;
     
-    .site-header {
-        background:var(--bg-img);
-        text-align: center;
-        padding-top: 0px; 
-        padding-bottom: 40px;
-      
-        
+}
+
+.post-detail {
+    width: 100%;
+}
+
+.post-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.post-pic {
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (min-width: 62.5em) {
+    .post-info {
+        flex-direction: row;
+        border: 1px solid var(--black);
+       
     }
-    .site-header img {
-        padding-top: 1rem;
-        display: inline;
-        width: 30rem;
+    .post-img {
+        width: 40%;
+        margin: 0 auto;
     }
-    
-    .nav {
-        visibility: visible;
-        margin-inline-end: 2rem;
-        
+
+    .post-detail {
+        width: 60%;
+        padding: 2rem;
     }
-    .nav-bg {
-        background: var(--white);
-    }
-    .navbar {
-        border: var(--border);
+
+    .post-container {
+        flex-direction: row;
+
     }
 }
+
+    
