--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,7 @@
 <!-- Logo for large screens -->
 <header>
   {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg" data-bs-theme="light">
+    <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
@@ -12,7 +12,7 @@
         </button>
         <!-- Navigation items -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav ">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
                 href="{% url 'home' %}">Home</a>
