--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -34,7 +34,7 @@
                             <i class="fas fa-heart"></i>
                         </button>
                         {% else %}
-                        <button type="submit" name="post_id" value="{{post.id}}" class="btn btn-like">
+                        <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
                             <i class="far fa-heart"></i>
                         </button>
                         {% endif %}
