--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,7 +25,8 @@
               <a class="nav-link" aria-current="page" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" 
+                href="{% url 'contact' %}">Contact</a>
               {% if request.user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"
