--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,11 +7,11 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Navigation items -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
@@ -27,19 +27,26 @@
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" 
                 href="{% url 'contact' %}">Contact</a>
+
               {% if request.user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"
-                href="{% url 'create_post' %}">New</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
-                href="{% url 'profile' request.user.id %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
-                href="/accounts/logout/">logout</a>
-            </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{ user.username }}
+                </a>
+              <ul class="dropdown-menu">
+                <li class="nav-item">
+                  <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
+                    href="{% url 'profile' request.user.id %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"
+                    href="{% url 'create_post' %}">Create Post</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
+                    href="/accounts/logout/">Logout</a>
+                </li>
+              </ul>
             {% else %}
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
