--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,45 +14,60 @@
                     {% if request.user == post.author %}
                         <a href="{% url 'edit_post' post.id %}"><small>Edit</small></a>
                         <a href="{% url 'delete_post' post.id %}"><small>Delete</a></small>
-                    {% else %}
-                        <button  class="btn btn-primary w-25 mb-4">
-                            <a href="{% url 'profile' post.id %}">Wisit Profile</a>
-                        </button>
-                        
                     {% endif %}
                 </p>
                 <hr>
-               
-                <p class="p-3">{{post.excerpt}}</p>
-                
+                <p class="p-3">{{post.excerpt}}</p>  
             </div>
         </div>
         <div class="post-container">
             <div class="content p-3">
                 <p>{{post.content|safe}}</p>
                 <hr>
-                <div>
-                    {% if user.is_authenticated %}
-                    <form action="{% url 'post_like' post.id %}" method="POST">
-                        {% csrf_token %}
-                        {% if post_is_liked %}
-                        <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                            <i class="fas fa-heart"></i>
-                        </button>
-                        {% else %}
-                        <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                            <i class="far fa-heart"></i>
-                        </button>
-                        {% endif %}
-                        <span class="text-secondary">{{ post.number_of_likes }}</span>
-                    </form>
-                    {% else %}
-                    <span class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }}</span>
-                    {% endif %}
-                </div>
             </div>
         </div>
+        <div>
+            {% if user.is_authenticated %}
+            <form action="{% url 'post_like' post.id %}" method="POST">
+                {% csrf_token %}
+                {% if post_is_liked %}
+                <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
+                    <i class="fas fa-heart"></i>
+                </button>
+                {% else %}
+                <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
+                    <i class="far fa-heart"></i>
+                </button>
+                {% endif %}
+                <span class="text-secondary">{{ post.number_of_likes }}</span>
+            </form>
+            {% else %}
+            <span class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }}</span>
+            {% endif %}
+        </div>
+        <br>
+        <div>
+            <h1>Comments:</h1>
+            {% if user.is_authenticated %}
+            <a class="btn btn-primary btn-sm mb-4" href="{% url 'add_comment' pk=post.pk %}">Add comment</a>
+            {% else %}
+           <a class="text-decoration-none" href="/accounts/login/"><p>Sign in to leave a comment</p></a>
+            {% endif %}
+            {% for comment in post.comments.all %}
+                <!-- Display commenter's name and comment's created date -->
+                <p>
+                    <strong>{{ comment.name }}</strong> -
+                        <span class="text-muted">
+                            {{ comment.created_on }}
+                        </span><br>
+                        <!-- Display the body of the comment -->
+                    {{ comment.body }}
+                </p>
+                
+            {% endfor %}  
+        </div>    
     </div>
    
 {% endblock content %}
+
 
