cleaning out my migrations for a new fresh database

--- a/blog/templates/blog/comment.html
+++ b/blog/templates/blog/comment.html
@@ -3,8 +3,7 @@
 {% block title %}Leave a comment{% endblock title %}
 
 {% block content %}
-<div class="container">
-    {% if request.user.is_authenticated  %}
+<!-- <div class="container">
     <form method="POST"  class="p-2 form">
         <h1 class="text-center">Leave a Comment</h1>
         {% csrf_token %}
@@ -13,8 +12,7 @@
             <button type="submit" class="btn btn-secondary mt-2">Send</button>
         </div>
     </form>
-    {% endif %}
 </div>
 {% endblock content %}
 
-
+ -->
