--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -46,13 +46,13 @@
                 <span class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }}</span> 
                 {% endif %} 
             </div>  
-            <div class="col-1">
+            <!-- <div class="col-1">
                 <span class="text-secondary"><i class="far fa-comments"></i> {{post.comments.count }}</span>  
-            </div>
+            </div> -->
         </div> 
    
         <br>
-        <div>
+        <!-- <div>
             <h1>Comments:</h1>
             {% if user.is_authenticated %}
             <a class="btn btn-primary btn-sm mb-4" href="{% url 'add_comment' pk=post.pk %}" role="button">Add comment</a>
@@ -60,15 +60,13 @@
            <a class="text-decoration-none" href="/accounts/login/"><p>Sign in to leave a comment</p></a>
             {% endif %}
             {% for comment in post.comments.all %}
-            <!-- Display commenter's name and comment's created date -->
             <div class="card-comment">
                 <p>
-                    <strong>{{ comment.name }}</strong> -
+                    <strong>{{ comment.user }}</strong> -
                     <span class="text-muted">
                         {{ comment.created_on }}
                     </span>
                     <br>
-                    <!-- Display the body of the comment -->
                     {{ comment.body|safe }}
                 </p>
             </div>
@@ -76,7 +74,7 @@
             <p>No comments here yet!</p>  
         </div>  
         {% endfor %}   
-    </div>
+    </div> -->
    
 {% endblock content %}
 
