add allowed host for tutor, fixed to comment on frontend

--- a/blog/templates/blog/comment.html
+++ b/blog/templates/blog/comment.html
@@ -3,7 +3,8 @@
 {% block title %}Leave a comment{% endblock title %}
 
 {% block content %}
-<!-- <div class="container">
+<div class="container">
+    
     <form method="POST"  class="p-2 form">
         <h1 class="text-center">Leave a Comment</h1>
         {% csrf_token %}
@@ -12,7 +13,8 @@
             <button type="submit" class="btn btn-secondary mt-2">Send</button>
         </div>
     </form>
+
 </div>
 {% endblock content %}
 
- -->
+
