--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -52,10 +52,10 @@
         </div> 
    
         <br>
-        <!-- <div>
+        <div>
             <h1>Comments:</h1>
             {% if user.is_authenticated %}
-            <a class="btn btn-primary btn-sm mb-4" href="{% url 'add_comment' pk=post.pk %}" role="button">Add comment</a>
+            <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
             {% else %}
            <a class="text-decoration-none" href="/accounts/login/"><p>Sign in to leave a comment</p></a>
             {% endif %}
@@ -74,7 +74,7 @@
             <p>No comments here yet!</p>  
         </div>  
         {% endfor %}   
-    </div> -->
+    </div>
    
 {% endblock content %}
 
