--- a/blog/templates/blog/comment.html
+++ b/blog/templates/blog/comment.html
@@ -7,12 +7,15 @@
     
     <form method="POST"  class="p-2 form">
         <h1 class="text-center">Leave a Comment</h1>
+        <p>Posting as: {{user.username}}</p>
         {% csrf_token %}
         {{ form|crispy }}
         <div class="text-center">
             <button type="submit" class="btn btn-secondary mt-2">Send</button>
         </div>
     </form>
+
+    
 
 </div>
 {% endblock content %}
